open app for beta testers

--- a/focus-companion/.gitignore
+++ b/focus-companion/.gitignore
@@ -34,3 +34,51 @@ logs/
 .Trashes
 ehthumbs.db
 Thumbs.db 
+
+# Beta testers emails
+allowed_emails.txt
+
+# Usage tracking and session data (contains user-specific data)
+data/usage_tracking.json
+data/user_session.json
+
+# Streamlit cache and temporary files
+.streamlit/
+
+# Python virtual environments
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+
+# pytest cache
+.pytest_cache/
+
+# mypy cache
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# Backup files
+*.bak
+*.backup
+*~
